fix: move the import of JaqpotApClient

--- a/examples/Python_SDK.ipynb
+++ b/examples/Python_SDK.ipynb
@@ -28,8 +28,7 @@
    "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
-    "load_dotenv('.env')\n",
-    "from jaqpotpy.api.jaqpot_api_client import JaqpotApiClient"
+    "load_dotenv('.env')"
    ]
   },
   {
@@ -49,6 +48,7 @@
     }
    ],
    "source": [
+    "from jaqpotpy.api.jaqpot_api_client import JaqpotApiClient\n",
     "jaqpot = JaqpotApiClient()\n",
     "model = jaqpot.get_model_by_id(6)\n",
     "print(model)"
