--- a/examples/Python_SDK.ipynb
+++ b/examples/Python_SDK.ipynb
@@ -184,7 +184,7 @@
    "id": "fe513bbf-d129-49b5-b4f2-8277ebd4e02d",
    "metadata": {},
    "source": [
-    "Parse `input_data` and model_id to `predict_with_model()`."
+    "Pass `input_data` and model_id to `predict_with_model()`."
    ]
   },
   {
