--- a/examples/Python_SDK.ipynb
+++ b/examples/Python_SDK.ipynb
@@ -213,7 +213,7 @@
    "id": "a9758033-1a21-41f3-9641-1c98e0569e54",
    "metadata": {},
    "source": [
-    "# Parse a csv to the model to take multiple predictions"
+    "# Pass a csv to the model to take multiple predictions"
    ]
   },
   {
